battle type selection